# Simple-AI-Assistant

./: .env  backend.py  pyproject.toml
my-ai-frontend/: package-lock.json  package.json
my-ai-frontend/pages/api/: chat.js
my-ai-frontend/src/app/: chatui.css  layout.tsx  page.tsx
my-ai-frontend/src/app/api/chat/: route.js
