[project]
name = "ai-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-google-genai>=2.1.7",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "mcp>=1.11.0",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
]
